kubernetes/loki/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: loki
  labels:
    pod-security.kubernetes.io/enforce: restricted #privileged
    pod-security.kubernetes.io/enforce-version: latest
    pod-security.kubernetes.io/warn: restricted #privileged
    pod-security.kubernetes.io/warn-version: latest
    pod-security.kubernetes.io/audit: restricted #privileged
    pod-security.kubernetes.io/audit-version: latest
    kubernetes.io/metadata.name: loki
    app.kubernetes.io/instance: loki
