kubernetes/loki/base/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: loki
  namespace: loki
  labels:
    app: loki
    app.kubernetes.io/instance: loki
  annotations:
    checkov.io/skip1: CKV_K8S_40=OpenShift Injects Random UID
    checkov.io/skip2: CKV_K8S_43=Digest not supported for this image
    gitops-ci.k8s.io/exempt-image-checksum: docker.io/grafana/loki
spec:
  replicas: 1
  podManagementPolicy: "Parallel"
  serviceName: loki
  selector:
    matchLabels:
      app: loki
  template:
    metadata:
      labels:
        app: loki
      annotations:
        enable.version-checker.io/loki: "true"
    spec:
      automountServiceAccountToken: false
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      serviceAccountName: loki
      securityContext:
        runAsNonRoot: true
        fsGroupChangePolicy: "OnRootMismatch"
        seccompProfile:
          type: RuntimeDefault
        # fsGroup: 10001        controlledValues: RequestsOnly # "RequestsAndLimits"

        # runAsGroup: 10001
        # runAsUser: 10001
      containers:
        - name: loki
          # renovate: docker.io/grafana/loki
          image: "docker.io/grafana/loki:2.9.15"
          imagePullPolicy: IfNotPresent
          args:
            - "-config.file=/etc/loki/loki.yaml"
          resizePolicy:
            - resourceName: cpu
              restartPolicy: NotRequired
            - resourceName: memory
              restartPolicy: NotRequired
          resources:
            requests:
              ephemeral-storage: "256Mi"
              memory: "512Mi"
              cpu: "100m"
            limits:
              ephemeral-storage: "256Mi"
              memory: "1Gi"
              cpu: "300m"
          volumeMounts:
            - name: config
              mountPath: /etc/loki
            - name: storage
              mountPath: /data
            - name: cache
              mountPath: /tmp
            - name: index
              mountPath: /index
          ports:
            - name: http-metrics
              containerPort: 3100
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
            timeoutSeconds: 1
            periodSeconds: 45
            successThreshold: 1
            failureThreshold: 10
          readinessProbe:
            httpGet:
              path: /ready
              port: http-metrics
            initialDelaySeconds: 45
            timeoutSeconds: 1
            periodSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          securityContext:
            # runAsGroup: 10001
            # runAsUser: 10001
            runAsNonRoot: true
            privileged: false
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      terminationGracePeriodSeconds: 4800
      volumes:
        - name: config
          configMap:
            name: loki
        - name: cache
          emptyDir:
            sizeLimit: 128Mi
        - name: index
          emptyDir:
            sizeLimit: 128Mi
      enableServiceLinks: false
  volumeClaimTemplates:
    - metadata:
        name: storage
      spec:
        accessModes:
          - ReadWriteOnce
        resources:
          requests:
            storage: 20Gi
        storageClassName: rook-ceph-block-ci
